--- a/en/index.html
+++ b/en/index.html
@@ -104,9 +104,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">141</b></p>
+        <p align="center">Total number of members: <b class="ref">142</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 94%">141/150</div>
+          <div class="progressbar-inside" style="width: 94.6%">142/150</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
@@ -855,6 +855,13 @@
               <td><a href="../pics/rainbowus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Samilogosy">recepus</a></td>
+              <td>
+                <p><img src="../pics/recepus.jpeg"></p>
+              </td>
+              <td><a href="../pics/recepus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja" onclick="rick()">rickus</a></td>
               <td>
                 <p><img src="../pics/rickus.jpeg"></p>
@@ -1079,7 +1086,7 @@
               <td><a href="../pics/werbrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-XNinja">wizardus</a></td>
+              <td><a class="ref idea-gh-label" href="#AN-XNinja">wizardus</a></td>
               <td>
                 <p><img src=../pics/wizardus.jpeg></p>
               </td>
@@ -1151,7 +1158,7 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
@@ -1179,6 +1186,10 @@
           <li><b class="ref2">💎 Artist</b>: More than 20 characters</li>
           <li><b class="ref3">🌹 Artist</b>: More than 30 characters</li>
         </ul>
+        <ul>
+          <li><code>... <a href="#" class="addchar-gh-label">#00</a></code>: Character addition</li>
+          <li><code>... <a href="#" class="idea-gh-label">#00</a></code>: Idea</li>
+        </ul>
         <p>Translation:</p>
         <ul>
           <li>🇫🇷 <b>French</b>: Apix</li>
@@ -1204,7 +1215,7 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank">Created by Apix with ❤ | 2022-2023</a></li>
+          <li><a href="https://github.com/Apix0n" target="_blank"><img src="/apix-logo.svg" class="svgicon"> Created by Apix with ❤ | 2022-2023</a></li>
         </ul>
       </div>
     </section>
