--- a/fr/index.html
+++ b/fr/index.html
@@ -101,9 +101,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">141</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">142</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 94%">141/150</div>
+          <div class="progressbar-inside" style="width: 94.6%">142/150</div>
         </div>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
@@ -852,6 +852,13 @@
               <td><a href="../pics/rainbowus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Samilogosy">recepus</a></td>
+              <td>
+                <p><img src="../pics/recepus.jpeg"></p>
+              </td>
+              <td><a href="../pics/recepus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja" onclick="rick()">rickus</a></td>
               <td>
                 <p><img src="../pics/rickus.jpeg"></p>
@@ -1076,7 +1083,7 @@
               <td><a href="../pics/werbrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-XNinja">wizardus</a></td>
+              <td><a class="ref idea-gh-label" href="#AN-XNinja">wizardus</a></td>
               <td>
                 <p><img src=../pics/wizardus.jpeg></p>
               </td>
@@ -1148,7 +1155,7 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> et <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Voir @XNinjaYmZ sur GitHub">XNinja</a></b> pour <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> et <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Voir @XNinjaYmZ sur GitHub">XNinja</a></b> pour <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> et <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> pour <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> pour <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code>,</li>
@@ -1176,6 +1183,10 @@
           <li><b class="ref2">💎 Artiste</b>: Plus de 20 personnages</li>
           <li><b class="ref3">🌹 Artiste</b>: Plus de 30 personnages</li>
         </ul>
+        <ul>
+          <li><code>... <a href="#" class="addchar-gh-label">#00</a></code>: Ajout de personnage</li>
+          <li><code>... <a href="#" class="idea-gh-label">#00</a></code>: Idée</li>
+        </ul>
         <p>Traduction:</p>
         <ul>
           <li>🇫🇷 <b>Français</b>: Apix</li>
@@ -1201,7 +1212,7 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank">Créé par Apix avec ❤ | 2022-2023</a></li>
+          <li><a href="https://github.com/Apix0n" target="_blank"><img src="/apix-logo.svg" class="svgicon"> Créé par Apix avec ❤ | 2022-2023</a></li>
         </ul>
       </div>
     </section>
