--- a/tr/index.html
+++ b/tr/index.html
@@ -102,9 +102,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">141</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">142</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 94%">141/150</div>
+          <div class="progressbar-inside" style="width: 94.6%">142/150</div>
         </div>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
@@ -853,6 +853,13 @@
               <td><a href="../pics/rainbowus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Samilogosy">recepus</a></td>
+              <td>
+                <p><img src="../pics/recepus.jpeg"></p>
+              </td>
+              <td><a href="../pics/recepus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja" onclick="rick()">rickus</a></td>
               <td>
                 <p><img src="../pics/rickus.jpeg"></p>
@@ -1077,7 +1084,7 @@
               <td><a href="../pics/werbrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-XNinja">wizardus</a></td>
+              <td><a class="ref idea-gh-label" href="#AN-XNinja">wizardus</a></td>
               <td>
                 <p><img src=../pics/wizardus.jpeg></p>
               </td>
@@ -1149,7 +1156,7 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
@@ -1177,6 +1184,10 @@
           <li><b class="ref2">💎 Sanatçı</b>: 20 karakterden fazla</li>
           <li><b class="ref3">🌹 Sanatçı</b>: 30 karakterden fazla</li>
         </ul>
+        <ul>
+          <li><code>... <a href="#" class="addchar-gh-label">#00</a></code>: Karakter ekleme</li>
+          <li><code>... <a href="#" class="idea-gh-label">#00</a></code>: Fikir</li>
+        </ul>
         <p>Çeviri:</p>
         <ul>
           <li>🇫🇷 <b>Fransızca</b>: Apix</li>
@@ -1202,7 +1213,7 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank">Apix tarafından ❤️ ile oluşturuldu | 2022-2023</a></li>
+          <li><a href="https://github.com/Apix0n" target="_blank"><img src="/apix-logo.svg" class="svgicon"> Apix tarafından ❤️ ile oluşturuldu | 2022-2023</a></li>
         </ul>
       </div>
     </section>
