--- a/en/index.html
+++ b/en/index.html
@@ -55,7 +55,7 @@
               <td><a href="#thanks">⭐ Thanks</a></td>
             </tr>
             <tr>
-              <td><a href="#projects">💿 Used projects</a></td>
+              <td><a href="#other">💿 Other</a></td>
             </tr>
           </tbody>
         </table>
@@ -192,9 +192,10 @@
         <div class="spaceline"></div>
       </div>
 
-      <!-- Used projects -->
-      <div id="projects">
-        <h2>💿 Used projects:</h2>
+      <!-- Other -->
+      <div id="other">
+        <h2>💿 Other</h2>
+        <h3>Used projects:</h3>
         <ul>
           <li>Font: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
           <li>Icons: <a href="https://fonts.google.com/icons">Material Icons</a></li>
@@ -203,6 +204,7 @@
           <li>Offline fonts: <a href="https://gwfh.mranftl.com/">google-webfonts-helper</a></li>
           <li>Hosting: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/apix0n/Armus">Armus</a> by "<a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="../en/#thanks">Apix and contributors</a>" is licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg"></a></p>
       </div>
     </section>
 
