--- a/fr/index.html
+++ b/fr/index.html
@@ -55,7 +55,7 @@
               <td><a href="#thanks">⭐ Remerciements</a></td>
             </tr>
             <tr>
-              <td><a href="#projects">💿 Projets utilisés</a></td>
+              <td><a href="#other">💿 Autre</a></td>
             </tr>
           </tbody>
         </table>
@@ -66,7 +66,7 @@
       <!-- Informations -->
       <div id="informations">
         <h2>📝 Informations</h2>
-        <div align="center"><b>Armus est un projet que j'ai créé avec un ami dans l'espoir de faire une armée d'amogi.</b></div>    
+        <div align="center"><b>Armus est un projet que j'ai créé avec un ami dans l'espoir de faire une armée d'amogi.</b></div>
         <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-fr gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
@@ -192,9 +192,10 @@
         <div class="spaceline"></div>
       </div>
 
-      <!-- Used projects -->
-      <div id="projects">
-        <h2>💿 Projets utilisés:</h2>
+      <!-- Other -->
+      <div id="other">
+        <h2>💿 Autre</h2>
+        <h3>Projets utilsés:</h3>
         <ul>
           <li>Police: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
           <li>Icônes: <a href="https://fonts.google.com/icons">Material Icons</a></li>
@@ -203,6 +204,7 @@
           <li>Polices hors-ligne: <a href="https://gwfh.mranftl.com/">google-webfonts-helper</a></li>
           <li>Hébergement: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/apix0n/Armus">Armus</a> par "<a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="../en/#thanks">Apix and contributors</a>" est sous license <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg"></a><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg"></a><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg"></a></p>
       </div>
     </section>
 
