--- a/en/index.html
+++ b/en/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#0f00e0">
+    <link rel="apple-touch-icon" sizes="114x114" href="at-icon.png">
     <meta property="og:image" content="social.png">
     <meta name="description" content="A project that I created with a friend in the hope to make an army of amogi.">
     <script src="../main.js" async></script>
