--- a/fr/index.html
+++ b/fr/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#ff0000">
+    <link rel="apple-touch-icon" sizes="114x114" href="at-icon.png">
     <meta property="og:image" content="social.png">
     <meta name="description" content="Un projet que j'ai créé avec un ami dans l'espoir de faire une armée d'amogi">
     <script src="../main.js" async></script>
