--- a/tr/index.html
+++ b/tr/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#f52626">
+    <link rel="apple-touch-icon" sizes="114x114" href="at-icon.png">
     <meta property="og:image" content="social.png">
     <meta name="description" content="Bir arkadaşımla birlikte bir amogi ordusu oluşturmak için yarattığımız bir proje.">
     <script src="../main.js" async></script>
